WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62901
Playing video from the manifest crashes on Windows
https://bugs.webkit.org/show_bug.cgi?id=62901
Summary
Playing video from the manifest crashes on Windows
Jer Noble
Reported
2011-06-17 12:45:44 PDT
Playing video from the manifest crashes on Windows
Attachments
Patch
(3.04 KB, patch)
2011-06-17 12:57 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(2.95 KB, patch)
2011-06-21 12:24 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2011-06-17 12:57:09 PDT
Created
attachment 97639
[details]
Patch
Jer Noble
Comment 2
2011-06-17 12:57:27 PDT
<
rdar://problem/9631240
>
Ada Chan
Comment 3
2011-06-17 13:04:46 PDT
One thing I overlooked: in the method above, QTMovie::loadPath(), should we null check cfURL and urlStringRef before releasing also? Can use RetainPtr also.
Darin Adler
Comment 4
2011-06-17 13:16:17 PDT
Comment on
attachment 97639
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=97639&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:694 > +#if USE(CF) && PLATFORM(WIN) > + RetainPtr<CFStringRef> cfPath(AdoptCF, path.createCFString()); > + RetainPtr<CFURLRef> cfURL(AdoptCF, CFURLCreateWithFileSystemPath(0, cfPath.get(), kCFURLWindowsPathStyle, false)); > + KURL url(cfURL.get()); > +#else > KURL url; > > url.setProtocol("file"); > url.setPath(path); > +#endif
This is probably the best short term fix. But longer term we would like a helper function that does this.
Jer Noble
Comment 5
2011-06-17 14:02:32 PDT
(In reply to
comment #3
)
> One thing I overlooked: in the method above, QTMovie::loadPath(), should we null check cfURL and urlStringRef before releasing also?
Yes, we should. This patch adds null-checks there as well.
> Can use RetainPtr also.
Unfortunately, we can't use RetainPtr from within the QTMovie subproject. This is because of the (ridiculous) way QuickTime includes work; they have their own versions of CF headers which conflict with the AAS versions.
Jer Noble
Comment 6
2011-06-17 14:23:01 PDT
Committed
r89172
: <
http://trac.webkit.org/changeset/89172
>
Jer Noble
Comment 7
2011-06-21 12:24:38 PDT
Created
attachment 98041
[details]
Patch
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug