third_party/WebKit/Source/WebCore/platform/graphics/win/QTMovie.cpp
@@ -450,8 +450,10 @@ void QTMovie::loadPath(const UChar* url, int len, bool preservesPitch)
 
     load(cfURL, preservesPitch);
 
-    CFRelease(cfURL);
-    CFRelease(urlStringRef);
+    if (cfURL)
+        CFRelease(cfURL);
+    if (urlStringRef)
+        CFRelease(urlStringRef);
 }
 
 void QTMovie::load(const UChar* url, int len, bool preservesPitch)
@@ -461,8 +463,10 @@ void QTMovie::load(const UChar* url, int len, bool preservesPitch)
 
     load(cfURL, preservesPitch);
 
-    CFRelease(cfURL);
-    CFRelease(urlStringRef);
+    if (cfURL)
+        CFRelease(cfURL);
+    if (urlStringRef)
+        CFRelease(urlStringRef);
 }
 
 void QTMovie::load(CFURLRef url, bool preservesPitch)
